# simple_shell

./: CMakeLists.txt  our_shell.h  our_shell_status.c  our_strtol.c
alias_functions/: our_print_alias.c  our_set_alias.c  our_unset_alias.c
environment_functions/: add_to_env.c  set_env.c  set_environ.c  unset_env.c
errors_handling_functions/: our_error_atoi.c  our_error_put.c  our_error_putchar.c
shell_built_in_functions/: our_check_chain.c  our_is_chain.c  our_replace_alias.c  our_replace_strings.c  our_replace_vars.c
shell_commands/: our_alias.c  our_cd.c  our_env.c  our_exit.c  our_get_env.c  our_help.c  our_history.c  our_set_env.c  our_unset_environ.c
string_functions/: is_delimiter.c  our_atoi.c  our_is_substring.c  our_isalpha.c  our_put_fd.c  our_putchar.c  our_putchar_fd.c  our_puts.c  our_strcat.c  our_strchr.c  our_strcmp.c  our_strcpy.c  our_strdup.c  our_strlen.c  our_strncat.c  our_strncpy.c  our_strtok.c  our_strtow.c
